[metadata]
name = vncdotool
version = attr: vncdotool.__version__
url = http://github.com/sibson/vncdotool
author = Marc Sibson
author_email = sibson+vncdotool@gmail.com
description = Command line VNC client
long_description = file: README.rst, CHANGELOG.rst
keywords = VNC, RFB
python_requires = >=3.8
license = MIT License
license_files = LICENSE.txt
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Framework :: Twisted
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	License :: OSI Approved :: MIT License
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Multimedia :: Graphics :: Viewers
	Topic :: Software Development :: Testing

[options]
zip_safe = True
packages =
	vncdotool
install_requires =
	Twisted
	Pillow
	cryptography
tests_require =
	pexpect

[options.entry_points]
console_scripts =
	vncdo = vncdotool.command:vncdo
	vncdotool = vncdotool.command:vncdo
	vnclog = vncdotool.command:vnclog
